# concurrio

./: .gitignore  LICENSE  README.md  architechture.drawio  pyproject.toml
app/: core_.py  test.py
app/core/: aio_executors.py  aio_workers.py  scheduler.py  schedulers.py
app/exceptions/: worker_exceptions.py
app/interfaces/: abs_executors.py  abs_handler.py  abs_shedulers.py  abs_worker.py
app/schemas/: alliases.py  command.py  processor.py  queues.py
app/utils/: common_utils.py
scripts/: install_pdm.sh
