[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Rostyslav Kobylianskyi", email = "r.kobylianskyi@gmail.com"},
]
dependencies = [
    "asyncio>=3.4.3",
    "aiomultiprocess>=0.9.0",
    "black>=22.6.0",
    "uvloop>=0.16.0",
    "pydantic>=1.9.2",
    "loguru>=0.6.0",
    "anyio>=3.6.1",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
